Change packaging and Docker deployment strategy
Switch from sbt-assembly + sbt-docker to using sbt-native-packager
The former approach builds a fat jar that results in class file
deduplication issues described in:
https://github.com/sbt/sbt-assembly/issues/391

sbt-native-packager does not rely in building a fat jar